   /dev/urandom (Phillip Marek).

 - Each thread keeps a copy of the process sigmask (POSIX) and it is inherited
   by children thread. The sigmask can be manipulated by the function
   EXT:CATCH-SIGNAL which has the signature
	(ext:catch-signal signal-code action &key process)
   The ACTION is one of :IGNORE, :DEFAULT, :CATCH, determining what ECL does
   when it receives the signal, or it can be :MASK/:UNMASK to determine whether
   the process is blocking the signal or not. The optional argument :PROCESS
   only applies to :MASK/:UNMASK and it can be the current process, some
   process that has not been activated or any other value (indicating that
   the function has a global effect, as sigprocmask).

 - Allocate executable memory using libffi instead of using just the
   Boehm-Weiser garbage collector.

 - In bytecodes.h, deactivate the threaded interpreter when using the LLVM
   compiler. The problem is that llvm-gcc disguises itself as GCC but it is
   not capable of properly compiling the jump table.

 - Implemented SEQUENCE-STREAMs, which are input/output streams defined on some
   specialized array type. The functions to create them are
     (ext:make-sequence-input-stream vector &key :start :end :external-format)
     (ext:make-sequence-output-stream vector &key :external-format)
        * If the array is a string, it is a character stream
        * If the array is specialized over integers and EXTERNAL-FORMAT is NIL
          the stream is a binary stream.
        * Otherwise, it is a binary string but READ/WRITE-CHAR may be used on it.
   Reading and writing does not preserve the original word size of the array
   but rather threads the array as a collection of bytes (octets), writing
   sequentially over it. Thus, if you use encodings such as UCS2 and UCS4, make
   sure that you choose the right endianness to match the shape of the array.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***